--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-awesome-gallery",
   "version": "0.4.3",
-  "description": "Awesome gallery with Reanimated v2",
+  "description": "Awesome gallery with Reanimated v4",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -65,17 +65,19 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-builder-bob": "^",
+    "react-native-builder-bob": "^0.20.0",
     "react-native-gesture-handler": "2.3.0",
-    "react-native-reanimated": "^3.2.0",
+    "react-native-reanimated": "^4.0.0",
+    "react-native-worklets": "^0.7.0",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": "^2.0.0",
-    "react-native-reanimated": "^3.2.0"
+    "react-native-reanimated": "^4.0.0",
+    "react-native-worklets": "^0.7.0"
   },
   "jest": {
     "preset": "react-native",
@@ -86,7 +88,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn typescript"
+      "pre-commit": "npm run lint && npm run typescript"
     }
   },
   "release-it": {
